--- a/SleepMonitor/res/layout/activity_main.xml
+++ b/SleepMonitor/res/layout/activity_main.xml
@@ -1,41 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center|left"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.htwg_konstanz.chhauss.sleepmonitor.MainActivity" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <Button
-        android:id="@+id/recordBtn"
+        android:id="@+id/toSleepMonitoringBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="30dp"
-        android:onClick="buttonToggled"
-        android:text="@string/startRecording" />
+        android:onClick="onButtonClicked"
+        android:text="@string/sleepMonitoring" />
 
     <Button
-        android:id="@+id/playBtn"
+        android:id="@+id/toMyRecordsBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="30dp"
-        android:onClick="buttonToggled"
-        android:text="@string/playRecord" />
-
-    <Button
-        android:id="@+id/analyzeBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="30dp"
-        android:onClick="onAnalyze"
-        android:text="@string/analyze" />
+        android:onClick="onButtonClicked"
+        android:text="@string/myRecords" />
 
 </LinearLayout>
