--- a/SleepMonitor/res/layout/activity_main.xml
+++ b/SleepMonitor/res/layout/activity_main.xml
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="de.htwg_konstanz.chhauss.sleepmonitor.MainActivity" >
 
     <Button
         android:id="@+id/toSleepMonitoringBtn"
@@ -17,5 +22,19 @@
         android:layout_height="wrap_content"
         android:onClick="onButtonClicked"
         android:text="@string/myRecords" />
+
+    <Button
+        android:id="@+id/resetDatabaseBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClicked"
+        android:text="@string/resetDatabase" />
+
+    <Button
+        android:id="@+id/deleteAllRecordsBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClicked"
+        android:text="@string/deleteAllRecords" />
 
 </LinearLayout>
