--- a/SleepMonitor/res/layout/activity_record_details.xml
+++ b/SleepMonitor/res/layout/activity_record_details.xml
@@ -15,6 +15,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/emptyString"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/recordFileSizeTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recordFileSize"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/recordFileDurationTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recrodFileDuration"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
