dynamisch einstellbares interval für die lautstärke abfrage hinzugefügt

--- a/SleepMonitor/res/layout/activity_sleepmonitoring.xml
+++ b/SleepMonitor/res/layout/activity_sleepmonitoring.xml
@@ -23,6 +23,19 @@
         android:layout_height="wrap_content"
         android:entries="@array/recordingOptions" />
 
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recordIntervalHard"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Spinner
+        android:id="@+id/noiseScanIntervalSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/noiseScanIntervals" />
+
     <Button
         android:id="@+id/recordBtn"
         android:layout_width="match_parent"
