--- a/SleepMonitor/res/layout/activity_record_details.xml
+++ b/SleepMonitor/res/layout/activity_record_details.xml
@@ -31,6 +31,14 @@
         android:text="@string/recrodFileDuration"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <TextView
+        android:id="@+id/curPosTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/currentPositionStartValue"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <SeekBar
         android:id="@+id/playbackSeekBar"
         android:layout_width="match_parent"
