--- a/SleepMonitor/res/layout/activity_main.xml
+++ b/SleepMonitor/res/layout/activity_main.xml
@@ -24,6 +24,17 @@
         android:text="@string/myRecords" />
 
     <Button
+        android:id="@+id/noiseMeterBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClicked"
+        android:text="@string/noiseMeter" />
+    
+    <Space
+		android:layout_width="1dp"
+		android:layout_height="40dp" />
+
+    <Button
         android:id="@+id/resetDatabaseBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
