--- a/SleepMonitor/res/layout/activity_main.xml
+++ b/SleepMonitor/res/layout/activity_main.xml
@@ -1,44 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.htwg_konstanz.chhauss.sleepmonitor.MainActivity" >
+    android:id="@+id/viewPager" >"
 
-    <Button
-        android:id="@+id/toSleepMonitoringBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClicked"
-        android:text="@string/sleepMonitoring" />
-
-    <Button
-        android:id="@+id/toMyRecordsBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClicked"
-        android:text="@string/myRecords" />
-    
-    <Space
-		android:layout_width="1dp"
-		android:layout_height="40dp" />
-
-    <Button
-        android:id="@+id/resetDatabaseBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClicked"
-        android:text="@string/resetDatabase" />
-
-    <Button
-        android:id="@+id/deleteAllRecordsBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClicked"
-        android:text="@string/deleteAllRecords" />
-
-</LinearLayout>
+</android.support.v4.view.ViewPager>
