--- a/SleepMonitor/res/layout/fragment_alarmclock.xml
+++ b/SleepMonitor/res/layout/fragment_alarmclock.xml
@@ -3,10 +3,63 @@
     android:id="@+id/TableLayout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:stretchColumns="*" >
 
     <TableRow
+        android:layout_weight="1" >
+
+        <TextView
+            android:id="@+id/alarmIntervalTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_span="4"
+            android:text="@string/emptyString"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    </TableRow>
+
+    <TableRow
         android:layout_marginTop="10dp"
+        android:layout_weight="1" >
+    
+	    <ToggleButton
+	        android:id="@+id/alarmOnOffBtn"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_span="4"
+	        android:textOff="Off"
+	        android:textOn="On" />
+	    
+	</TableRow>
+	
+	    
+    <TableRow
+        android:layout_marginTop="10dp"
+        android:layout_weight="1" >
+        
+	    <TextView
+	        android:id="@+id/textView1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/fromInterval"
+	        android:layout_span="2"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+	    <TextView
+	        android:id="@+id/textView2"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/toInterval"
+	        android:layout_span="2"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	    
+    </TableRow>
+
+    <TableRow
         android:layout_weight="1" >
          
 	    <NumberPicker
@@ -19,52 +72,28 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content" />
 
-	</TableRow>
-	
-    <TableRow
-        android:layout_marginTop="10dp"
-        android:layout_weight="1" >
-         
-	    <NumberPicker
-	        android:id="@+id/end_hourNP"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" />
-	         
+		<NumberPicker
+		    android:id="@+id/end_hourNP"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content" />
+
 		<NumberPicker
 		    android:id="@+id/end_minuteNP"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content" />
 
 	</TableRow>
+    
+    <TableRow
+        android:layout_marginTop="5dp"
+        android:layout_weight="1" >
+	
+	</TableRow>
+	
+    
+    <TableRow
+        android:layout_weight="1" >
 
-    
-    <TableRow 
-        android:layout_weight="1"
-        android:layout_marginTop="10dp" >
-		
-	    <TextView
-	        android:id="@+id/alarmIntervalTV"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="@string/emptyString"
-	        android:layout_span="2"
-	        android:gravity="center_vertical|center_horizontal"
-	        android:textAppearance="?android:attr/textAppearanceLarge" />
-    
-    </TableRow>
-    
-    <TableRow 
-        android:layout_weight="1"
-        android:layout_marginTop="10dp" >
-        
-	    <ToggleButton
-	        android:id="@+id/toggleButton1"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_span="2"
-	        android:textOff="Off"
-	        android:textOn="On" />
-
-    </TableRow>
+	</TableRow>
      
 </TableLayout>
